--- a/user/themes/local/css/custom.css
+++ b/user/themes/local/css/custom.css
@@ -1,3 +1,79 @@
+.p-instruments {
+  max-width: 30rem;
+}
 
+.hero {
+  height: 30rem;
+}
+.hero .container {
+  padding: 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  max-width: none;
+}
+.hero h2 {
+  font-size: 2rem;
+  margin: 0;
+  padding: 1rem;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.6980392157);
+  color: #ffffff !important;
+}
+
+.overlay-dark .image-overlay {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.overlay-dark-gradient .image-overlay {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3019607843), rgba(0, 0, 0, 0));
+}
+
+#header {
+  background-color: #4063cb;
+}
+#header .container {
+  max-width: unset;
+}
+#header .title {
+  color: #ffffff;
+  font-size: 1rem !important;
+}
+
+#footer {
+  background: #4063cb !important;
+}
+#footer, #footer a {
+  color: #ffffff;
+}
+
+.navigation {
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  justify-content: space-around;
+}
+.navigation .nav-item {
+  width: 100%;
+  color: #4063cb;
+  background: #ffffff;
+}
+.navigation .nav-item.active {
+  color: #ffffff;
+  background: #4063cb;
+}
+.navigation a, .navigation a:hover, .navigation a:visited, .navigation a:active {
+  color: unset;
+  text-decoration: none;
+}
+
+.modular-text {
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+}
+
+section.modular-text {
+  padding-top: 0.5rem;
+  padding-bottom: 1.5rem;
+}
 
 /*# sourceMappingURL=custom.css.map */
