--- a/user/themes/local/scss/custom.scss
+++ b/user/themes/local/scss/custom.scss
@@ -1,2 +1,14 @@
 @use 'theme';
+@use 'pages';
+@use 'elements';
+@use 'navigation';
 
+.modular-text {
+	padding-top: 1.5rem;
+	padding-bottom: 1rem;
+}
+
+section.modular-text {
+	padding-top: .5rem;
+	padding-bottom: 1.5rem;
+}
