--- a/user/themes/local/css/custom.css
+++ b/user/themes/local/css/custom.css
@@ -5,6 +5,9 @@
 .hero {
   height: 30rem;
 }
+.hero #to-start {
+  display: none;
+}
 .hero .container {
   padding: 0;
   position: absolute;
@@ -19,13 +22,6 @@
   text-align: center;
   background-color: rgba(0, 0, 0, 0.6980392157);
   color: #ffffff !important;
-}
-
-.overlay-dark .image-overlay {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-.overlay-dark-gradient .image-overlay {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3019607843), rgba(0, 0, 0, 0));
 }
 
 #header {
@@ -64,16 +60,6 @@
 .navigation a, .navigation a:hover, .navigation a:visited, .navigation a:active {
   color: unset;
   text-decoration: none;
-}
-
-.modular-text {
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
-}
-
-section.modular-text {
-  padding-top: 0.5rem;
-  padding-bottom: 1.5rem;
 }
 
 /*# sourceMappingURL=custom.css.map */
